# pygame-practice

./: .gitignore  main.py  pyproject.toml
space_shooter/: main.py
vampire_survivors/code/: groups.py  main.py  player.py  settings.py  sprites.py  ui.py
vampire_survivors/data/maps/: world.tmx
