[tool.poetry]
name = "pygame-practice"
version = "0.1.0"
description = ""
authors = ["Zykie <zykie1018@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.6.9"
pygame-ce = "^2.5.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
